hphp/test/quick/on_list_assign.php.expectf
HipHop Fatal error: Can't use return value in write context in %s on line 12
